--- a/HW02.ipynb
+++ b/HW02.ipynb
@@ -9,7 +9,11 @@
     "* 학번: 99990000\n",
     "\n",
     "위에 이름과 학번을 자신의 것으로 기입하고 또 맨 위에 노트북의 제목도 `HW01 이름 학번`으로 바꾸어 HiClass를 통해 마감시간까지 제출하면 됩니다.\n",
-    "마감시간은 HiClass 제출하는 항목에 설정해 놓겠습니다."
+    "마감시간은 HiClass 제출하는 항목에 설정해 놓겠습니다.\n",
+    "\n",
+    "주의사항: 이번에는 반드시 테스트 코드가 있어야 합니다.\n",
+    " * 메소드 내용이 완전히 맞게 구현되었다 하더라도 테스트 코드가 없으면 0점입니다.\n",
+    " * 리스트에는 기본적으로 두 가지 경우가 항상 있으므로 (null인 경우와 아닌 경우) 각각의 테스트마다 최소한 2개 이상의 값으로 테스트해 보아야 합니다."
    ]
   },
   {
@@ -28,16 +32,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkre250d1f7.NodeInt"
+       "com.twosigma.beaker.javash.bkr3687b722.NodeInt"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,16 +145,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkre250d1f7.Nd"
+       "com.twosigma.beaker.javash.bkr3687b722.Nd"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +167,6 @@
     "    Node<T> next;\n",
     "    \n",
     "    // 생성자를 적절하게 정의하라\n",
-    "    Node(T v, Node<T> n) { value=v; next=n; }\n",
     "    \n",
     "    T head() { return value; }\n",
     "    Node<T> tail() { return next; }\n",
@@ -184,26 +187,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "l3: a, b, c, null\n",
-      "ll3: [c, null], [b, c, null], [a, b, c, null], null\n"
+     "ename": "constructor Node in class com.twosigma.beaker.javash.bkr3687b722.Node<T> cannot be applied to given types;",
+     "evalue": "constructor Node in class com.twosigma.beaker.javash.bkr3687b722.Node<T> cannot be applied to given types;",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31mconstructor Node in class com.twosigma.beaker.javash.bkr3687b722.Node<T> cannot be applied to given types;\u001b[0;0m",
+      "\u001b[0;31m  required: no arguments\u001b[0;0m",
+      "\u001b[0;31m  found: java.lang.String,com.twosigma.beaker.javash.bkr3687b722.Node<java.lang.String>\u001b[0;0m",
+      "\u001b[0;31m  reason: actual and formal argument lists differ in length\u001b[0;0m",
+      "\u001b[0;31m Node<String> l1 = new Node<String>(\"c\", l0)\u001b[0;0m",
+      "\u001b[0;31m                   ^                        ^ \u001b[0;0m",
+      "\u001b[0;31m\u001b[0;0m",
+      "\u001b[0;31mcannot infer type arguments for com.twosigma.beaker.javash.bkr3687b722.Node<>\u001b[0;0m",
+      "\u001b[0;31m  reason: cannot infer type-variable(s) T\u001b[0;0m",
+      "\u001b[0;31m    (actual and formal argument lists differ in length)\u001b[0;0m",
+      "\u001b[0;31m Node<String> l2 = new Node<>(\"b\", l1)\u001b[0;0m",
+      "\u001b[0;31m                   ^                  ^ \u001b[0;0m",
+      "\u001b[0;31m\u001b[0;0m",
+      "\u001b[0;31mconstructor Node in class com.twosigma.beaker.javash.bkr3687b722.Node<T> cannot be applied to given types;\u001b[0;0m",
+      "\u001b[0;31m  required: no arguments\u001b[0;0m",
+      "\u001b[0;31m  found: java.lang.String,com.twosigma.beaker.javash.bkr3687b722.Node<java.lang.String>\u001b[0;0m",
+      "\u001b[0;31m  reason: actual and formal argument lists differ in length\u001b[0;0m",
+      "\u001b[0;31m Node<String> l3 = new Node(\"a\", l2)\u001b[0;0m",
+      "\u001b[0;31m                   ^                ^ \u001b[0;0m",
+      "\u001b[0;31m\u001b[0;0m",
+      "\u001b[0;31mconstructor Node in class com.twosigma.beaker.javash.bkr3687b722.Node<T> cannot be applied to given types;\u001b[0;0m",
+      "\u001b[0;31m  required: no arguments\u001b[0;0m",
+      "\u001b[0;31m  found: com.twosigma.beaker.javash.bkr3687b722.Node<java.lang.String>,com.twosigma.beaker.javash.bkr3687b722.Node<com.twosigma.beaker.javash.bkr3687b722.Node<java.lang.String>>\u001b[0;0m",
+      "\u001b[0;31m  reason: actual and formal argument lists differ in length\u001b[0;0m",
+      "\u001b[0;31m Node< Node<String> > ll1 = new Node< Node<String> >(l3, ll0)\u001b[0;0m",
+      "\u001b[0;31m                            ^                                ^ \u001b[0;0m",
+      "\u001b[0;31m\u001b[0;0m",
+      "\u001b[0;31mcannot infer type arguments for com.twosigma.beaker.javash.bkr3687b722.Node<>\u001b[0;0m",
+      "\u001b[0;31m  reason: cannot infer type-variable(s) T\u001b[0;0m",
+      "\u001b[0;31m    (actual and formal argument lists differ in length)\u001b[0;0m",
+      "\u001b[0;31m Node< Node<String> > ll2 = new Node<>(l2, ll1)\u001b[0;0m",
+      "\u001b[0;31m                            ^                  ^ \u001b[0;0m",
+      "\u001b[0;31m\u001b[0;0m",
+      "\u001b[0;31mconstructor Node in class com.twosigma.beaker.javash.bkr3687b722.Node<T> cannot be applied to given types;\u001b[0;0m",
+      "\u001b[0;31m  required: no arguments\u001b[0;0m",
+      "\u001b[0;31m  found: com.twosigma.beaker.javash.bkr3687b722.Node<java.lang.String>,com.twosigma.beaker.javash.bkr3687b722.Node<com.twosigma.beaker.javash.bkr3687b722.Node<java.lang.String>>\u001b[0;0m",
+      "\u001b[0;31m  reason: actual and formal argument lists differ in length\u001b[0;0m",
+      "\u001b[0;31m Node< Node<String> > ll3 = new Node(l1, ll2)\u001b[0;0m",
+      "\u001b[0;31m                            ^                ^ \u001b[0;0m"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "null"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
