--- a/HW02.ipynb
+++ b/HW02.ipynb
@@ -38,7 +38,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr3687b722.NodeInt"
+       "com.twosigma.beaker.javash.bkrccfb67f7.NodeInt"
       ]
      },
      "execution_count": 1,
@@ -128,6 +128,49 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "l3: 1, 2, 3, null\n",
+      "ll3: [3, null], [2, 3, null], [1, 2, 3, null], null\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "null"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "NodeInt l0 = null;\n",
+    "NodeInt l1 = new NodeInt(3, l0);\n",
+    "NodeInt l2 = new NodeInt(2, l1);\n",
+    "NodeInt l3 = new NodeInt(1, l2);\n",
+    "\n",
+    "System.out.println(\"l3: \" + l3); // a, b, c, null\n",
+    "\n",
+    "NodeNodeInt ll0 = null;\n",
+    "NodeNodeInt ll1 = new NodeNodeInt(l3, ll0);\n",
+    "NodeNodeInt ll2 = new NodeNodeInt(l2, ll1);\n",
+    "NodeNodeInt ll3 = new NodeNodeInt(l1, ll2);\n",
+    "\n",
+    "System.out.println(\"ll3: \" + ll3); // [3, null], [2, 3, null], [1, 2, 3, null], null\n",
+    "\n",
+    "// // flat을 제대로 정의하고 나면 이런 게 동작할 것이다.\n",
+    "// System.out.println(\"NodeNodeInt.flat(ll3) = \" + NodeNodeInt.flat(ll3)); // 3, 2, 3, 1, 2, 3, null"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -145,16 +188,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr3687b722.Nd"
+       "com.twosigma.beaker.javash.bkrccfb67f7.Nd"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,50 +230,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "constructor Node in class com.twosigma.beaker.javash.bkr3687b722.Node<T> cannot be applied to given types;",
-     "evalue": "constructor Node in class com.twosigma.beaker.javash.bkr3687b722.Node<T> cannot be applied to given types;",
+     "ename": "constructor Node in class com.twosigma.beaker.javash.bkrccfb67f7.Node<T> cannot be applied to given types;",
+     "evalue": "constructor Node in class com.twosigma.beaker.javash.bkrccfb67f7.Node<T> cannot be applied to given types;",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31mconstructor Node in class com.twosigma.beaker.javash.bkr3687b722.Node<T> cannot be applied to given types;\u001b[0;0m",
+      "\u001b[0;31mconstructor Node in class com.twosigma.beaker.javash.bkrccfb67f7.Node<T> cannot be applied to given types;\u001b[0;0m",
       "\u001b[0;31m  required: no arguments\u001b[0;0m",
-      "\u001b[0;31m  found: java.lang.String,com.twosigma.beaker.javash.bkr3687b722.Node<java.lang.String>\u001b[0;0m",
+      "\u001b[0;31m  found: java.lang.String,com.twosigma.beaker.javash.bkrccfb67f7.Node<java.lang.String>\u001b[0;0m",
       "\u001b[0;31m  reason: actual and formal argument lists differ in length\u001b[0;0m",
       "\u001b[0;31m Node<String> l1 = new Node<String>(\"c\", l0)\u001b[0;0m",
       "\u001b[0;31m                   ^                        ^ \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
-      "\u001b[0;31mcannot infer type arguments for com.twosigma.beaker.javash.bkr3687b722.Node<>\u001b[0;0m",
+      "\u001b[0;31mcannot infer type arguments for com.twosigma.beaker.javash.bkrccfb67f7.Node<>\u001b[0;0m",
       "\u001b[0;31m  reason: cannot infer type-variable(s) T\u001b[0;0m",
       "\u001b[0;31m    (actual and formal argument lists differ in length)\u001b[0;0m",
       "\u001b[0;31m Node<String> l2 = new Node<>(\"b\", l1)\u001b[0;0m",
       "\u001b[0;31m                   ^                  ^ \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
-      "\u001b[0;31mconstructor Node in class com.twosigma.beaker.javash.bkr3687b722.Node<T> cannot be applied to given types;\u001b[0;0m",
+      "\u001b[0;31mconstructor Node in class com.twosigma.beaker.javash.bkrccfb67f7.Node<T> cannot be applied to given types;\u001b[0;0m",
       "\u001b[0;31m  required: no arguments\u001b[0;0m",
-      "\u001b[0;31m  found: java.lang.String,com.twosigma.beaker.javash.bkr3687b722.Node<java.lang.String>\u001b[0;0m",
+      "\u001b[0;31m  found: java.lang.String,com.twosigma.beaker.javash.bkrccfb67f7.Node<java.lang.String>\u001b[0;0m",
       "\u001b[0;31m  reason: actual and formal argument lists differ in length\u001b[0;0m",
       "\u001b[0;31m Node<String> l3 = new Node(\"a\", l2)\u001b[0;0m",
       "\u001b[0;31m                   ^                ^ \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
-      "\u001b[0;31mconstructor Node in class com.twosigma.beaker.javash.bkr3687b722.Node<T> cannot be applied to given types;\u001b[0;0m",
+      "\u001b[0;31mconstructor Node in class com.twosigma.beaker.javash.bkrccfb67f7.Node<T> cannot be applied to given types;\u001b[0;0m",
       "\u001b[0;31m  required: no arguments\u001b[0;0m",
-      "\u001b[0;31m  found: com.twosigma.beaker.javash.bkr3687b722.Node<java.lang.String>,com.twosigma.beaker.javash.bkr3687b722.Node<com.twosigma.beaker.javash.bkr3687b722.Node<java.lang.String>>\u001b[0;0m",
+      "\u001b[0;31m  found: com.twosigma.beaker.javash.bkrccfb67f7.Node<java.lang.String>,com.twosigma.beaker.javash.bkrccfb67f7.Node<com.twosigma.beaker.javash.bkrccfb67f7.Node<java.lang.String>>\u001b[0;0m",
       "\u001b[0;31m  reason: actual and formal argument lists differ in length\u001b[0;0m",
       "\u001b[0;31m Node< Node<String> > ll1 = new Node< Node<String> >(l3, ll0)\u001b[0;0m",
       "\u001b[0;31m                            ^                                ^ \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
-      "\u001b[0;31mcannot infer type arguments for com.twosigma.beaker.javash.bkr3687b722.Node<>\u001b[0;0m",
+      "\u001b[0;31mcannot infer type arguments for com.twosigma.beaker.javash.bkrccfb67f7.Node<>\u001b[0;0m",
       "\u001b[0;31m  reason: cannot infer type-variable(s) T\u001b[0;0m",
       "\u001b[0;31m    (actual and formal argument lists differ in length)\u001b[0;0m",
       "\u001b[0;31m Node< Node<String> > ll2 = new Node<>(l2, ll1)\u001b[0;0m",
       "\u001b[0;31m                            ^                  ^ \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
-      "\u001b[0;31mconstructor Node in class com.twosigma.beaker.javash.bkr3687b722.Node<T> cannot be applied to given types;\u001b[0;0m",
+      "\u001b[0;31mconstructor Node in class com.twosigma.beaker.javash.bkrccfb67f7.Node<T> cannot be applied to given types;\u001b[0;0m",
       "\u001b[0;31m  required: no arguments\u001b[0;0m",
-      "\u001b[0;31m  found: com.twosigma.beaker.javash.bkr3687b722.Node<java.lang.String>,com.twosigma.beaker.javash.bkr3687b722.Node<com.twosigma.beaker.javash.bkr3687b722.Node<java.lang.String>>\u001b[0;0m",
+      "\u001b[0;31m  found: com.twosigma.beaker.javash.bkrccfb67f7.Node<java.lang.String>,com.twosigma.beaker.javash.bkrccfb67f7.Node<com.twosigma.beaker.javash.bkrccfb67f7.Node<java.lang.String>>\u001b[0;0m",
       "\u001b[0;31m  reason: actual and formal argument lists differ in length\u001b[0;0m",
       "\u001b[0;31m Node< Node<String> > ll3 = new Node(l1, ll2)\u001b[0;0m",
       "\u001b[0;31m                            ^                ^ \u001b[0;0m"
