after monday pc-b
after monday pc-b

--- a/HW02.ipynb
+++ b/HW02.ipynb
@@ -22,12 +22,51 @@
    "source": [
     "## 우선 제너릭이 아닌 정수 리스트와 \"정수 리스트\"의 리스트를 따로 정의\n",
     "\n",
-    " * `equals` (1점)\n",
-    " * `append` (1점)\n",
-    " * `reverse` (1점)\n",
-    " * `tails` (1점)\n",
-    " * `palindrome` (1점)\n",
-    " * `flat` (1점)"
+    "클래스 메소드와 인스턴스 메소드가 같은 이름으로 한쌍으로 동작하게 대부분 만들면 된다.\n",
+    "(다른 방법으로 가능하면 그렇게 창의적으로 해도 정확하게만 돌면 상관없음)\n",
+    "\n",
+    "`palindrome`을 제외한 클래스 메소드는 이미 완성되어 있으므로 수정하지 않는다.\n",
+    "\n",
+    " * `equals` (1점) 두 리스트에 들어있는 값이 순서와 내용이 정확히 같은지\n",
+    "   ```\n",
+    "   NodeInt l1 = ... // 1,2,3,null\n",
+    "   NodeInt l2 = ... // 1,2,3,null\n",
+    "   Node.equals(l1,l2); // 결과값이 true\n",
+    "   \n",
+    "   l1과 l2의 길이가 다르다던가 길이가 같아도 내용이 같지 않거나 내용이 같아도 순서가 다르면 false\n",
+    "\n",
+    "   Node.equals(null,null); // 결과값이 true\n",
+    "   한쪽은 null인데 다른쪽은 null이 아니면 false\n",
+    "   ```\n",
+    " * `append` (1점) 두 리스트를 이어붙인 새로운 리스트를 결과로 계산\n",
+    "   ```\n",
+    "   NodeInt l1 = ... // 1,2,null\n",
+    "   NodeInt l2 = ... // 3,4,null\n",
+    "   Node.append(l1,l2); // 결과는 1,2,3,4,null\n",
+    "   // 이렇게 하고 나서 l1과 l2는 변하지 않고 그대로\n",
+    "   \n",
+    "   Node.append(null,l2); // 결과는 그냥 l2이다\n",
+    "   ```\n",
+    " * `reverse` (1점) 리스트에 나타나는 원소의 순서를 거꾸로 뒤집은 새로운 리스트를 계산\n",
+    "   ```\n",
+    "   NodeInt l1 = ... // 1,2,3,null\n",
+    "   Node.reverse(l1); // 결과는 3,2,1,null\n",
+    "   // 이렇게 하고 나서 l1은 그대로 변하지 않음\n",
+    "   ```\n",
+    " * `palindrome` (1점) 리스트의 순서를 거꾸로 뒤집어도 내용이 그대로인지 검사\n",
+    "   ```\n",
+    "   이런 것들이 true가 된다\n",
+    "   NodeInt l0 = null\n",
+    "   NodeInt l1 = ... // 1,null\n",
+    "   NodeInt l2 = ... // 1,2,3,3,2,1,null\n",
+    "   NodeInt l3 = ... // 1,2,3,2,1,null\n",
+    "   NodeInt.palindrome(l0); // 결과가 true\n",
+    "   NodeInt.palindrome(l1); // 결과가 true\n",
+    "   NodeInt.palindrome(l2); // 결과가 true\n",
+    "   NodeInt.palindrome(l3); // 결과가 true\n",
+    "   ```\n",
+    " * `tails` (1점) 주석 참고할 것\n",
+    " * `flat` (1점) 주석 참고할 것"
    ]
   },
   {
@@ -38,7 +77,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkrccfb67f7.NodeInt"
+       "com.twosigma.beaker.javash.bkr75025562.NodeInt"
       ]
      },
      "execution_count": 1,
@@ -121,6 +160,8 @@
     "        return \"[\" + head() + \"], \" + tail();\n",
     "    }\n",
     "    \n",
+    "    // [2,3,null],[3,null],[null],null 이런 내용의 xss가 있다면\n",
+    "    // NodeNodeInt.flat(xss)의 결과는 2,3,3,null가 된다\n",
     "    static NodeInt flat(NodeNodeInt xss) { return (xss==null)? null: xss.flat(); }\n",
     "    \n",
     "    NodeInt flat() { return null; } // 힌트: 이것도 append를 이용하면 쉽다\n",
@@ -129,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -137,6 +178,10 @@
      "output_type": "stream",
      "text": [
       "l3: 1, 2, 3, null\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
       "ll3: [3, null], [2, 3, null], [1, 2, 3, null], null\n"
      ]
     },
@@ -146,7 +191,7 @@
        "null"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +202,13 @@
     "NodeInt l2 = new NodeInt(2, l1);\n",
     "NodeInt l3 = new NodeInt(1, l2);\n",
     "\n",
-    "System.out.println(\"l3: \" + l3); // a, b, c, null\n",
+    "System.out.println(\"l3: \" + l3); // 1, 2, 3, null\n",
+    "\n",
+    "System.out.println(NodeInt.length(l0));\n",
+    "System.out.println(NodeInt.length(l1));\n",
+    "System.out.println(NodeInt.length(l2));\n",
+    "System.out.println(NodeInt.length(l3));\n",
+    "\n",
     "\n",
     "NodeNodeInt ll0 = null;\n",
     "NodeNodeInt ll1 = new NodeNodeInt(l3, ll0);\n",
@@ -176,6 +227,9 @@
    "source": [
     "## 제너릭 클래스 정의\n",
     "\n",
+    "주의: `int`같은 기본타입은 그냥 `==`로 비교연산을 하면 되는데\n",
+    "제너릭은 기본적으로 클래스 인스턴스가 되는 타입들 즉 오브젝트만을 다루므로 `==` 대신 `equals`를 써야.\n",
+    "\n",
     "* 생성자 (1점)\n",
     "* length (1점)\n",
     "* equals (1점)\n",
@@ -188,24 +242,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkrccfb67f7.Nd"
+       "com.twosigma.beaker.javash.bkr75025562.Nd"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "class Nd { }\n",
-    "\n",
-    "class Node<T> extends Nd {\n",
+    "class Node<T> {\n",
     "    T value;\n",
     "    Node<T> next;\n",
     "    \n",
@@ -230,50 +282,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "constructor Node in class com.twosigma.beaker.javash.bkrccfb67f7.Node<T> cannot be applied to given types;",
-     "evalue": "constructor Node in class com.twosigma.beaker.javash.bkrccfb67f7.Node<T> cannot be applied to given types;",
+     "ename": "constructor Node in class com.twosigma.beaker.javash.bkr75025562.Node<T> cannot be applied to given types;",
+     "evalue": "constructor Node in class com.twosigma.beaker.javash.bkr75025562.Node<T> cannot be applied to given types;",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31mconstructor Node in class com.twosigma.beaker.javash.bkrccfb67f7.Node<T> cannot be applied to given types;\u001b[0;0m",
+      "\u001b[0;31mconstructor Node in class com.twosigma.beaker.javash.bkr75025562.Node<T> cannot be applied to given types;\u001b[0;0m",
       "\u001b[0;31m  required: no arguments\u001b[0;0m",
-      "\u001b[0;31m  found: java.lang.String,com.twosigma.beaker.javash.bkrccfb67f7.Node<java.lang.String>\u001b[0;0m",
+      "\u001b[0;31m  found: java.lang.String,com.twosigma.beaker.javash.bkr75025562.Node<java.lang.String>\u001b[0;0m",
       "\u001b[0;31m  reason: actual and formal argument lists differ in length\u001b[0;0m",
       "\u001b[0;31m Node<String> l1 = new Node<String>(\"c\", l0)\u001b[0;0m",
       "\u001b[0;31m                   ^                        ^ \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
-      "\u001b[0;31mcannot infer type arguments for com.twosigma.beaker.javash.bkrccfb67f7.Node<>\u001b[0;0m",
+      "\u001b[0;31mcannot infer type arguments for com.twosigma.beaker.javash.bkr75025562.Node<>\u001b[0;0m",
       "\u001b[0;31m  reason: cannot infer type-variable(s) T\u001b[0;0m",
       "\u001b[0;31m    (actual and formal argument lists differ in length)\u001b[0;0m",
       "\u001b[0;31m Node<String> l2 = new Node<>(\"b\", l1)\u001b[0;0m",
       "\u001b[0;31m                   ^                  ^ \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
-      "\u001b[0;31mconstructor Node in class com.twosigma.beaker.javash.bkrccfb67f7.Node<T> cannot be applied to given types;\u001b[0;0m",
+      "\u001b[0;31mconstructor Node in class com.twosigma.beaker.javash.bkr75025562.Node<T> cannot be applied to given types;\u001b[0;0m",
       "\u001b[0;31m  required: no arguments\u001b[0;0m",
-      "\u001b[0;31m  found: java.lang.String,com.twosigma.beaker.javash.bkrccfb67f7.Node<java.lang.String>\u001b[0;0m",
+      "\u001b[0;31m  found: java.lang.String,com.twosigma.beaker.javash.bkr75025562.Node<java.lang.String>\u001b[0;0m",
       "\u001b[0;31m  reason: actual and formal argument lists differ in length\u001b[0;0m",
       "\u001b[0;31m Node<String> l3 = new Node(\"a\", l2)\u001b[0;0m",
       "\u001b[0;31m                   ^                ^ \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
-      "\u001b[0;31mconstructor Node in class com.twosigma.beaker.javash.bkrccfb67f7.Node<T> cannot be applied to given types;\u001b[0;0m",
+      "\u001b[0;31mconstructor Node in class com.twosigma.beaker.javash.bkr75025562.Node<T> cannot be applied to given types;\u001b[0;0m",
       "\u001b[0;31m  required: no arguments\u001b[0;0m",
-      "\u001b[0;31m  found: com.twosigma.beaker.javash.bkrccfb67f7.Node<java.lang.String>,com.twosigma.beaker.javash.bkrccfb67f7.Node<com.twosigma.beaker.javash.bkrccfb67f7.Node<java.lang.String>>\u001b[0;0m",
+      "\u001b[0;31m  found: com.twosigma.beaker.javash.bkr75025562.Node<java.lang.String>,com.twosigma.beaker.javash.bkr75025562.Node<com.twosigma.beaker.javash.bkr75025562.Node<java.lang.String>>\u001b[0;0m",
       "\u001b[0;31m  reason: actual and formal argument lists differ in length\u001b[0;0m",
       "\u001b[0;31m Node< Node<String> > ll1 = new Node< Node<String> >(l3, ll0)\u001b[0;0m",
       "\u001b[0;31m                            ^                                ^ \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
-      "\u001b[0;31mcannot infer type arguments for com.twosigma.beaker.javash.bkrccfb67f7.Node<>\u001b[0;0m",
+      "\u001b[0;31mcannot infer type arguments for com.twosigma.beaker.javash.bkr75025562.Node<>\u001b[0;0m",
       "\u001b[0;31m  reason: cannot infer type-variable(s) T\u001b[0;0m",
       "\u001b[0;31m    (actual and formal argument lists differ in length)\u001b[0;0m",
       "\u001b[0;31m Node< Node<String> > ll2 = new Node<>(l2, ll1)\u001b[0;0m",
       "\u001b[0;31m                            ^                  ^ \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
-      "\u001b[0;31mconstructor Node in class com.twosigma.beaker.javash.bkrccfb67f7.Node<T> cannot be applied to given types;\u001b[0;0m",
+      "\u001b[0;31mconstructor Node in class com.twosigma.beaker.javash.bkr75025562.Node<T> cannot be applied to given types;\u001b[0;0m",
       "\u001b[0;31m  required: no arguments\u001b[0;0m",
-      "\u001b[0;31m  found: com.twosigma.beaker.javash.bkrccfb67f7.Node<java.lang.String>,com.twosigma.beaker.javash.bkrccfb67f7.Node<com.twosigma.beaker.javash.bkrccfb67f7.Node<java.lang.String>>\u001b[0;0m",
+      "\u001b[0;31m  found: com.twosigma.beaker.javash.bkr75025562.Node<java.lang.String>,com.twosigma.beaker.javash.bkr75025562.Node<com.twosigma.beaker.javash.bkr75025562.Node<java.lang.String>>\u001b[0;0m",
       "\u001b[0;31m  reason: actual and formal argument lists differ in length\u001b[0;0m",
       "\u001b[0;31m Node< Node<String> > ll3 = new Node(l1, ll2)\u001b[0;0m",
       "\u001b[0;31m                            ^                ^ \u001b[0;0m"
@@ -302,6 +354,13 @@
     "\n",
     "// 마찬가지로 다른 메소드에 대해서도 테스트 코드 작성"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -316,7 +375,7 @@
    "mimetype": "",
    "name": "Java",
    "nbconverter_exporter": "",
-   "version": "11.0.3"
+   "version": "1.8.0_121"
   },
   "toc": {
    "base_numbering": 1,
