--- a/HW02.ipynb
+++ b/HW02.ipynb
@@ -77,7 +77,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr75025562.NodeInt"
+       "com.twosigma.beaker.javash.bkr3dad6e0c.NodeInt"
       ]
      },
      "execution_count": 1,
@@ -87,8 +87,8 @@
    ],
    "source": [
     "class NodeInt {\n",
-    "    private int value;\n",
-    "    private NodeInt next;\n",
+    "    private final int value;\n",
+    "    private final NodeInt next;\n",
     "    // 생성자\n",
     "    NodeInt(int v, NodeInt n) { value=v; next=n; } \n",
     "    // 기본적인 값을 가져오기 위한 메소드\n",
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
        "null"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,24 +242,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "com.twosigma.beaker.javash.bkr75025562.Nd"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ERROR",
+     "evalue": " java.lang.IllegalStateException",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mERROR: java.lang.IllegalStateException: variable value not initialized in the default constructor\u001b[0;0m",
+      "\u001b[1;31m private final T value;\u001b[0;0m",
+      "\u001b[1;31m ^                     ^ \u001b[0;0m",
+      "\u001b[1;31m\u001b[0;0m",
+      "\u001b[1;31mvariable next not initialized in the default constructor\u001b[0;0m",
+      "\u001b[1;31m private final Node<T> next;\u001b[0;0m",
+      "\u001b[1;31m ^                          ^ \u001b[0;0m"
+     ]
     }
    ],
    "source": [
     "class Node<T> {\n",
-    "    T value;\n",
-    "    Node<T> next;\n",
+    "    private final T value;\n",
+    "    private final Node<T> next;\n",
     "    \n",
     "    // 생성자를 적절하게 정의하라\n",
     "    \n",
@@ -269,7 +273,7 @@
     "    @Override // 리스트의 내용을 알아보기 편하게 출력되게\n",
     "    public String toString() {\n",
     "        return\n",
-    "            ( (head() instanceof Nd)\n",
+    "            ( (head() instanceof Node)\n",
     "             ? \"[\"+ head() + \"]\"\n",
     "             :      head() )\n",
     "            + \", \" + tail();\n",
@@ -282,53 +286,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "constructor Node in class com.twosigma.beaker.javash.bkr75025562.Node<T> cannot be applied to given types;",
-     "evalue": "constructor Node in class com.twosigma.beaker.javash.bkr75025562.Node<T> cannot be applied to given types;",
+     "ename": "cannot find symbol",
+     "evalue": "cannot find symbol",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31mconstructor Node in class com.twosigma.beaker.javash.bkr75025562.Node<T> cannot be applied to given types;\u001b[0;0m",
-      "\u001b[0;31m  required: no arguments\u001b[0;0m",
-      "\u001b[0;31m  found: java.lang.String,com.twosigma.beaker.javash.bkr75025562.Node<java.lang.String>\u001b[0;0m",
-      "\u001b[0;31m  reason: actual and formal argument lists differ in length\u001b[0;0m",
+      "\u001b[1;31mcannot find symbol\u001b[0;0m",
+      "\u001b[1;31m  symbol:   class Node\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr3dad6e0c.BeakerWrapperClass1261714175Id47fdaac06c9e42deacb47ab0100cea37\u001b[0;0m",
+      "\u001b[0;31m Node<String> l0 = null\u001b[0;0m",
+      "\u001b[0;31m ^   ^                   \u001b[0;0m",
+      "\u001b[0;31m\u001b[0;0m",
+      "\u001b[0;31mcannot find symbol\u001b[0;0m",
+      "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr3dad6e0c.BeakerWrapperClass1261714175Id47fdaac06c9e42deacb47ab0100cea37\u001b[0;0m",
+      "\u001b[0;31m Node<String> l1 = new Node<String>\u001b[0;0m",
+      "\u001b[0;31m ^   ^                               \u001b[0;0m",
+      "\u001b[0;31m\u001b[0;0m",
+      "\u001b[0;31mcannot find symbol\u001b[0;0m",
+      "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr3dad6e0c.BeakerWrapperClass1261714175Id47fdaac06c9e42deacb47ab0100cea37\u001b[0;0m",
       "\u001b[0;31m Node<String> l1 = new Node<String>(\"c\", l0)\u001b[0;0m",
-      "\u001b[0;31m                   ^                        ^ \u001b[0;0m",
+      "\u001b[0;31m                       ^   ^                  \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
-      "\u001b[0;31mcannot infer type arguments for com.twosigma.beaker.javash.bkr75025562.Node<>\u001b[0;0m",
-      "\u001b[0;31m  reason: cannot infer type-variable(s) T\u001b[0;0m",
-      "\u001b[0;31m    (actual and formal argument lists differ in length)\u001b[0;0m",
+      "\u001b[0;31mcannot find symbol\u001b[0;0m",
+      "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr3dad6e0c.BeakerWrapperClass1261714175Id47fdaac06c9e42deacb47ab0100cea37\u001b[0;0m",
+      "\u001b[0;31m Node<String> l2 = new Node<>(\"b\", \u001b[0;0m",
+      "\u001b[0;31m ^   ^                               \u001b[0;0m",
+      "\u001b[0;31m\u001b[0;0m",
+      "\u001b[0;31mcannot find symbol\u001b[0;0m",
+      "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr3dad6e0c.BeakerWrapperClass1261714175Id47fdaac06c9e42deacb47ab0100cea37\u001b[0;0m",
       "\u001b[0;31m Node<String> l2 = new Node<>(\"b\", l1)\u001b[0;0m",
-      "\u001b[0;31m                   ^                  ^ \u001b[0;0m",
+      "\u001b[0;31m                       ^   ^            \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
-      "\u001b[0;31mconstructor Node in class com.twosigma.beaker.javash.bkr75025562.Node<T> cannot be applied to given types;\u001b[0;0m",
-      "\u001b[0;31m  required: no arguments\u001b[0;0m",
-      "\u001b[0;31m  found: java.lang.String,com.twosigma.beaker.javash.bkr75025562.Node<java.lang.String>\u001b[0;0m",
-      "\u001b[0;31m  reason: actual and formal argument lists differ in length\u001b[0;0m",
+      "\u001b[0;31mcannot find symbol\u001b[0;0m",
+      "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr3dad6e0c.BeakerWrapperClass1261714175Id47fdaac06c9e42deacb47ab0100cea37\u001b[0;0m",
+      "\u001b[0;31m Node<String> l3 = new Node(\"a\", l2\u001b[0;0m",
+      "\u001b[0;31m ^   ^                               \u001b[0;0m",
+      "\u001b[0;31m\u001b[0;0m",
+      "\u001b[0;31mcannot find symbol\u001b[0;0m",
+      "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr3dad6e0c.BeakerWrapperClass1261714175Id47fdaac06c9e42deacb47ab0100cea37\u001b[0;0m",
       "\u001b[0;31m Node<String> l3 = new Node(\"a\", l2)\u001b[0;0m",
-      "\u001b[0;31m                   ^                ^ \u001b[0;0m",
+      "\u001b[0;31m                       ^   ^          \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
-      "\u001b[0;31mconstructor Node in class com.twosigma.beaker.javash.bkr75025562.Node<T> cannot be applied to given types;\u001b[0;0m",
-      "\u001b[0;31m  required: no arguments\u001b[0;0m",
-      "\u001b[0;31m  found: com.twosigma.beaker.javash.bkr75025562.Node<java.lang.String>,com.twosigma.beaker.javash.bkr75025562.Node<com.twosigma.beaker.javash.bkr75025562.Node<java.lang.String>>\u001b[0;0m",
-      "\u001b[0;31m  reason: actual and formal argument lists differ in length\u001b[0;0m",
-      "\u001b[0;31m Node< Node<String> > ll1 = new Node< Node<String> >(l3, ll0)\u001b[0;0m",
-      "\u001b[0;31m                            ^                                ^ \u001b[0;0m",
+      "\u001b[0;31mcannot find symbol\u001b[0;0m",
+      "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr3dad6e0c.BeakerWrapperClass1261714175Id47fdaac06c9e42deacb47ab0100cea37\u001b[0;0m",
+      "\u001b[0;31m Node< Node<String> > ll0 = null\u001b[0;0m",
+      "\u001b[0;31m ^   ^                            \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
-      "\u001b[0;31mcannot infer type arguments for com.twosigma.beaker.javash.bkr75025562.Node<>\u001b[0;0m",
-      "\u001b[0;31m  reason: cannot infer type-variable(s) T\u001b[0;0m",
-      "\u001b[0;31m    (actual and formal argument lists differ in length)\u001b[0;0m",
-      "\u001b[0;31m Node< Node<String> > ll2 = new Node<>(l2, ll1)\u001b[0;0m",
-      "\u001b[0;31m                            ^                  ^ \u001b[0;0m",
+      "\u001b[0;31mcannot find symbol\u001b[0;0m",
+      "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr3dad6e0c.BeakerWrapperClass1261714175Id47fdaac06c9e42deacb47ab0100cea37\u001b[0;0m",
+      "\u001b[0;31m Node< Node<String> > ll0 = null\u001b[0;0m",
+      "\u001b[0;31m       ^   ^                      \u001b[0;0m",
       "\u001b[0;31m\u001b[0;0m",
-      "\u001b[0;31mconstructor Node in class com.twosigma.beaker.javash.bkr75025562.Node<T> cannot be applied to given types;\u001b[0;0m",
-      "\u001b[0;31m  required: no arguments\u001b[0;0m",
-      "\u001b[0;31m  found: com.twosigma.beaker.javash.bkr75025562.Node<java.lang.String>,com.twosigma.beaker.javash.bkr75025562.Node<com.twosigma.beaker.javash.bkr75025562.Node<java.lang.String>>\u001b[0;0m",
-      "\u001b[0;31m  reason: actual and formal argument lists differ in length\u001b[0;0m",
-      "\u001b[0;31m Node< Node<String> > ll3 = new Node(l1, ll2)\u001b[0;0m",
-      "\u001b[0;31m                            ^                ^ \u001b[0;0m"
+      "\u001b[0;31mcannot find symbol\u001b[0;0m",
+      "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr3dad6e0c.BeakerWrapperClass1261714175Id47fdaac06c9e42deacb47ab0100cea37\u001b[0;0m",
+      "\u001b[0;31m Node< Node<String> > ll1 = new Nod\u001b[0;0m",
+      "\u001b[0;31m ^   ^                               \u001b[0;0m",
+      "\u001b[0;31m\u001b[0;0m",
+      "\u001b[0;31mcannot find symbol\u001b[0;0m",
+      "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr3dad6e0c.BeakerWrapperClass1261714175Id47fdaac06c9e42deacb47ab0100cea37\u001b[0;0m",
+      "\u001b[0;31m Node< Node<String> > ll1 = new Node< Nod\u001b[0;0m",
+      "\u001b[0;31m       ^   ^                               \u001b[0;0m",
+      "\u001b[0;31m\u001b[0;0m",
+      "\u001b[0;31mcannot find symbol\u001b[0;0m",
+      "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr3dad6e0c.BeakerWrapperClass1261714175Id47fdaac06c9e42deacb47ab0100cea37\u001b[0;0m",
+      "\u001b[0;31mNode< Node<String> > ll1 = new Node< Node<String> >(l3, ll0)\u001b[0;0m",
+      "\u001b[0;31m                               ^   ^                          \u001b[0;0m",
+      "\u001b[0;31m\u001b[0;0m",
+      "\u001b[0;31mcannot find symbol\u001b[0;0m",
+      "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr3dad6e0c.BeakerWrapperClass1261714175Id47fdaac06c9e42deacb47ab0100cea37\u001b[0;0m",
+      "\u001b[0;31mNode<String> > ll1 = new Node< Node<String> >(l3, ll0)\u001b[0;0m",
+      "\u001b[0;31m                               ^   ^                    \u001b[0;0m",
+      "\u001b[0;31m\u001b[0;0m",
+      "\u001b[0;31mcannot find symbol\u001b[0;0m",
+      "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr3dad6e0c.BeakerWrapperClass1261714175Id47fdaac06c9e42deacb47ab0100cea37\u001b[0;0m",
+      "\u001b[0;31m Node< Node<String> > ll2 = new Nod\u001b[0;0m",
+      "\u001b[0;31m ^   ^                               \u001b[0;0m",
+      "\u001b[0;31m\u001b[0;0m",
+      "\u001b[0;31mcannot find symbol\u001b[0;0m",
+      "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr3dad6e0c.BeakerWrapperClass1261714175Id47fdaac06c9e42deacb47ab0100cea37\u001b[0;0m",
+      "\u001b[0;31m Node< Node<String> > ll2 = new Node<>(l2\u001b[0;0m",
+      "\u001b[0;31m       ^   ^                               \u001b[0;0m",
+      "\u001b[0;31m\u001b[0;0m",
+      "\u001b[0;31mcannot find symbol\u001b[0;0m",
+      "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr3dad6e0c.BeakerWrapperClass1261714175Id47fdaac06c9e42deacb47ab0100cea37\u001b[0;0m",
+      "\u001b[0;31mNode< Node<String> > ll2 = new Node<>(l2, ll1)\u001b[0;0m",
+      "\u001b[0;31m                               ^   ^            \u001b[0;0m",
+      "\u001b[0;31m\u001b[0;0m",
+      "\u001b[0;31mcannot find symbol\u001b[0;0m",
+      "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr3dad6e0c.BeakerWrapperClass1261714175Id47fdaac06c9e42deacb47ab0100cea37\u001b[0;0m",
+      "\u001b[0;31m Node< Node<String> > ll3 = new Nod\u001b[0;0m",
+      "\u001b[0;31m ^   ^                               \u001b[0;0m",
+      "\u001b[0;31m\u001b[0;0m",
+      "\u001b[0;31mcannot find symbol\u001b[0;0m",
+      "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr3dad6e0c.BeakerWrapperClass1261714175Id47fdaac06c9e42deacb47ab0100cea37\u001b[0;0m",
+      "\u001b[0;31m Node< Node<String> > ll3 = new Node(l1, \u001b[0;0m",
+      "\u001b[0;31m       ^   ^                               \u001b[0;0m",
+      "\u001b[0;31m\u001b[0;0m",
+      "\u001b[0;31mcannot find symbol\u001b[0;0m",
+      "\u001b[0;31m  symbol:   class Node\u001b[0;0m",
+      "\u001b[0;31m  location: class com.twosigma.beaker.javash.bkr3dad6e0c.BeakerWrapperClass1261714175Id47fdaac06c9e42deacb47ab0100cea37\u001b[0;0m",
+      "\u001b[0;31mNode< Node<String> > ll3 = new Node(l1, ll2)\u001b[0;0m",
+      "\u001b[0;31m                               ^   ^          \u001b[0;0m"
      ]
     }
    ],
